# Lin-Compiler

./: .gitignore  CMakeLists.txt  README.md  TaskSheet.txt
docs/test/: a.out  test  test.asm
lc-build/: out  out.asm  test.lin
src/: main.cpp
src/Allocator/: ArenaAllocator.cpp  ArenaAllocator.h
src/Compiler/: DefineTypes.h  Functions.h  Generation.cpp  Generation.h  Parser.cpp  Parser.h  Statement.h  Tokenization.cpp  Tokenization.h  Variable.h  VariableType.h  VectorHasher.h
stdlib/: core.h
stdlib/allocator/: allocate.c  allocate.h  test.c
stdlib/asm/: asmcore.asm
stdlib/printf/: printf.c  printf.h
stdlib/string/: string.c  string.h
